Main page is adapted

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               <div class="item"><img class="cert-slider-img" src="img/certs/cert-14.jpg" alt="Сертификат 14"/>
               </div>
             </div>
-            <div class="carousel-indicators">
+            <ul class="carousel-indicators">
               <li class="active" data-target="#certs-slider" data-slide-to="0"></li>
               <li data-target="#certs-slider" data-slide-to="1"></li>
               <li data-target="#certs-slider" data-slide-to="2"></li>
@@ -423,7 +423,7 @@
               <li data-target="#certs-slider" data-slide-to="12"></li>
               <li data-target="#certs-slider" data-slide-to="13"></li>
               <li data-target="#certs-slider" data-slide-to="14"></li>
-            </div><a class="left carousel-control" href="#certs-slider" role="button" data-slide="prev"><</a><a class="right carousel-control" href="#certs-slider" role="button" data-slide="next">></a>
+            </ul><a class="left carousel-control" href="#certs-slider" role="button" data-slide="prev"><</a><a class="right carousel-control" href="#certs-slider" role="button" data-slide="next">></a>
           </div>
           <div class="carousel slide" id="photos-slider" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
@@ -472,7 +472,7 @@
               <div class="item"><img class="cert-slider-img" src="img/certs/photo-22.jpg" alt="Сертификат 22"/>
               </div>
             </div>
-            <div class="carousel-indicators">
+            <ul class="carousel-indicators">
               <li class="active" data-target="#photos-slider" data-slide-to="0"></li>
               <li data-target="#photos-slider" data-slide-to="-1"></li>
               <li data-target="#photos-slider" data-slide-to="-2"></li>
@@ -495,7 +495,7 @@
               <li data-target="#photos-slider" data-slide-to="-19"></li>
               <li data-target="#photos-slider" data-slide-to="-20"></li>
               <li data-target="#photos-slider" data-slide-to="-21"></li>
-            </div><a class="left carousel-control" href="#photos-slider" role="button" data-slide="prev"><</a><a class="right carousel-control" href="#photos-slider" role="button" data-slide="next">></a>
+            </ul><a class="left carousel-control" href="#photos-slider" role="button" data-slide="prev"><</a><a class="right carousel-control" href="#photos-slider" role="button" data-slide="next">></a>
           </div>
           <form class="form form-main" action="https://shop.mv-centr.ru/?r=personal/newsletter/sub/add&id=25863&lg=ru&Contact[id_newsletter]=200" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
             <h5 class="form-title">Подписка на анонсы по Арт-терапии</h5>
@@ -546,5 +546,8 @@
     </footer>
     <script src="js/libs.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- BEGIN CALLPY CODE {literal}  -->
+    <script>(function(w,t,p,v,c,f,s,r,h,l,d){w[p]="//callpy.com/";w[v]="5.10";w[c]=false;if(t==w){var tmp=l.callpy_data;if(tmp==null||!l.callpy_html||!l[c]){w[f]=false}else{w[f]=true;w[s]=JSON.parse(tmp);var tm=new Date().getTime();if(tm-w[s].lastSave<20000){if(w[s].insertcode){eval(w[s].insertcode)}else{w[f]=false}}else{w[f]=false}}}else{w[f]=false}var callpy_script=d.createElement("script");try{var tmp=parent.window.location.href?1:0}catch(e){var tmp=0}callpy_script.type="text/javascript";callpy_script.async=true;if(!w[f]||!l[h]){l[h]=new Date().getTime()}callpy_script.src=w[p]+"c/"+w.location.host.replace(/www./i,"")+"/"+(t==w?(w[f]?1:2):(tmp==1?4:3))+".js?id=19509&m="+l[h];callpy_script.onload=function(){iowisp.init()};d.body.appendChild(callpy_script)})(window,window.top,"callpy_path","callpy_version","tiny","sven","callpy_storage","callpy_chat_scroller","callpy_lastchat",localStorage,document);</script>
+    <!-- {/literal} END CALLPY CODE  -->
   </body>
 </html>
